implemented member refs for ident parent owner